--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,82 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer components {
+  body {
+    @apply bg-slate-300 overflow-x-hidden;
+  }
+  .sectionLogin {
+    @apply relative w-full h-full flex;
+  }
+  .imgBx {
+    @apply absolute md:relative md:w-1/2 w-full h-full md:h-screen left-0 top-0 before:content-[""] before:absolute before:top-0 before:left-0 before:w-full before:h-full before:bg-gradient-to-t before:from-blue-300 before:to-purple-800 z-10 before:mix-blend-screen;
+  }
+  .contentBx {
+    @apply flex w-screen md:w-1/2 h-screen justify-center items-center z-10;
+  }
+  .imgBx > img {
+    @apply w-full h-full object-cover;
+  }
+  .heading {
+    @apply text-slate-600 font-extrabold text-xl uppercase mb-3 border-b-4 border-teal-500 text-center pb-3 md:p-0 md:inline-block -tracking-tighter;
+  }
+  .formBx {
+    @apply w-full lg:w-1/2 mx-4 px-4 py-5 rounded-xl lg:bg-slate-200/50 backdrop-blur-md shadow-xl lg:shadow-xl shadow-blue-400 md:shadow-slate-400/30;
+  }
+  .label {
+    @apply text-lg inline-block mb-3 text-slate-600 font-semibold -tracking-tight capitalize;
+  }
+  .inputForm {
+    @apply w-full px-3 py-4 outline-none font-medium border border-slate-400 -tracking-tight text-slate-500 bg-transparent rounded-xl;
+  }
 
-* {
-  box-sizing: border-box;
+  .btnForm {
+    @apply bg-teal-600 text-slate-200 outline-none border-none font-extrabold uppercase cursor-pointer px-3 py-4 rounded-xl w-full hover:bg-teal-500 hover:text-slate-100 transition-all duration-500;
+  }
+  .card {
+    @apply shadow-xl relative m-auto bg-slate-500/50 backdrop-blur-2xl rounded-md w-11/12 md:w-9/12 lg:w-10/12 h-48 transition-all duration-500;
+  }
+
+  .card:hover {
+    @apply h-[320px];
+  }
+
+  .cardImg {
+    @apply bg-slate-400/50 shadow-xl rounded-xl w-40 h-40 overflow-hidden left-1/2 absolute -translate-x-1/2 -top-1/4 transition-all duration-300;
+  }
+
+  .card:hover .cardImg {
+    @apply h-44 w-44;
+  }
+  .details {
+    @apply flex flex-col px-4 translate-y-32 transition-all duration-500;
+  }
+  .card:hover .details {
+    @apply translate-y-28;
+  }
+  .list {
+    @apply w-full flex flex-col md:flex-row justify-between items-center bg-slate-400 p-5 rounded-md;
+  }
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-lg bg-gradient-to-t from-sky-500 to-teal-600;
+  }
+  .navbar {
+    @apply fixed top-0 left-0 h-screen w-14 items-center m-0 flex flex-col backdrop-blur-lg text-slate-800 shadow-lg z-20 transition-all duration-300 gap-2 pt-6;
+  }
+  .nav_small {
+    @apply sticky top-0 backdrop-blur-lg w-full text-3xl md:hidden flex justify-evenly items-center py-5 z-20 shadow-lg;
+  }
+  .btnNav {
+    @apply w-auto h-12 px-2 rounded-lg text-slate-800 backdrop-blur-lg shadow-xl border-2 border-slate-300;
+  }
+  .btnNavs {
+    @apply shadow-lg p-1 hover:bg-teal-500 text-slate-600 hover:text-slate-800 transition-all ease-linear duration-300 rounded-md;
+  }
+  .text-nav {
+    @apply absolute w-auto min-w-max left-16 m-2 p-2 bg-slate-700 text-slate-200 font-bold uppercase rounded-lg z-40 origin-left scale-0 duration-200 transition-all shadow-lg hidden lg:inline;
+  }
 }
