--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,9 +74,21 @@
     @apply w-auto h-12 px-2 rounded-lg text-slate-800 backdrop-blur-lg shadow-xl border-2 border-slate-300;
   }
   .btnNavs {
-    @apply shadow-lg p-1 hover:bg-teal-500 text-slate-600 hover:text-slate-800 transition-all ease-linear duration-300 rounded-md;
+    @apply shadow-lg p-1 hover:bg-teal-500 text-slate-800 md:text-slate-700 hover:text-slate-800 transition-all ease-linear duration-300 rounded-md;
   }
   .text-nav {
     @apply absolute w-auto min-w-max left-16 m-2 p-2 bg-slate-700 text-slate-200 font-bold uppercase rounded-lg z-40 origin-left scale-0 duration-200 transition-all shadow-lg hidden lg:inline;
+  }
+  .cardEmpleado {
+    @apply py-10 px-3 md:px-0 mx-4 rounded-lg shadow-xl md:py-0 flex md:gap-4 items-center md:flex-row flex-col bg-gradient-to-tr from-teal-300 to-sky-800;
+  }
+  .contentList {
+    @apply w-full lg:w-9/12 m-auto flex flex-col gap-5 bg-slate-500 md:p-10 md:rounded-lg py-10 md:mb-24;
+  }
+  .contentGrid {
+    @apply grid w-full  md:grid-cols-2 lg:grid-cols-3 lg:w-9/12 gap-y-24 mt-20 mb-10 md:mb-24 m-auto p-5;
+  }
+  .contenido {
+    @apply py-10;
   }
 }
